Closed Bug 1625197 Opened 5 years ago Closed 5 years ago

Crash near null [@ operator mozilla::gfx::Matrix4x4Typed]

Categories

(Core :: DOM: Core & HTML, defect, P1)

defect

Tracking

()

VERIFIED FIXED
mozilla76
Tracking Status
firefox-esr68 --- unaffected
firefox74 --- wontfix
firefox75 --- wontfix
firefox76 --- verified

People

(Reporter: jkratzer, Assigned: saschanaz)

References

(Blocks 1 open bug, Regression)

Details

(Keywords: regression, testcase, Whiteboard: [bugmon:bisected,confirmed][fuzzblocker], [wptsync upstream])

Attachments

(2 files)

Attached file testcase.html

Testcase found while fuzzing mozilla-central rev 3e5a7430c8d7.

==14704==ERROR: AddressSanitizer: SEGV on unknown address 0x000000000038 (pc 0x7ff8c572e8c8 bp 0x7ffee2625bd0 sp 0x7ffee2625bd0 T0)
==14704==The signal is caused by a READ memory access.
==14704==Hint: address points to the zero page.
    #0 0x7ff8c572e8c7 in get /builds/worker/workspace/obj-build/dist/include/nsAutoPtr.h:147:12
    #1 0x7ff8c572e8c7 in operator mozilla::gfx::Matrix4x4Typed<mozilla::gfx::UnknownUnits, mozilla::gfx::UnknownUnits, double> * /builds/worker/workspace/obj-build/dist/include/nsAutoPtr.h:161:12
    #2 0x7ff8c572e8c7 in mozilla::dom::DOMMatrixReadOnly::IsIdentity() const /builds/worker/checkouts/gecko/dom/base/DOMMatrix.cpp:397:7
    #3 0x7ff8c572cc19 in mozilla::dom::DOMMatrix::MultiplySelf(mozilla::dom::DOMMatrixInit const&, mozilla::ErrorResult&) /builds/worker/checkouts/gecko/dom/base/DOMMatrix.cpp:762:14
    #4 0x7ff8c572ca2a in mozilla::dom::DOMMatrixReadOnly::Multiply(mozilla::dom::DOMMatrixInit const&, mozilla::ErrorResult&) const /builds/worker/checkouts/gecko/dom/base/DOMMatrix.cpp:352:11
    #5 0x7ff8c6ed696d in mozilla::dom::DOMMatrixReadOnly_Binding::multiply(JSContext*, JS::Handle<JSObject*>, void*, JSJitMethodCallArgs const&) /builds/worker/workspace/obj-build/dom/bindings/DOMMatrixBinding.cpp:5348:76
    #6 0x7ff8c7437c78 in bool mozilla::dom::binding_detail::GenericMethod<mozilla::dom::binding_detail::NormalThisPolicy, mozilla::dom::binding_detail::ThrowExceptions>(JSContext*, unsigned int, JS::Value*) /builds/worker/checkouts/gecko/dom/bindings/BindingUtils.cpp:3205:13
    #7 0x7ff8cd1bf057 in CallJSNative /builds/worker/checkouts/gecko/js/src/vm/Interpreter.cpp:476:13
    #8 0x7ff8cd1bf057 in js::InternalCallOrConstruct(JSContext*, JS::CallArgs const&, js::MaybeConstruct, js::CallReason) /builds/worker/checkouts/gecko/js/src/vm/Interpreter.cpp:568:12
    #9 0x7ff8cd1c0d0a in InternalCall(JSContext*, js::AnyInvokeArgs const&, js::CallReason) /builds/worker/checkouts/gecko/js/src/vm/Interpreter.cpp:631:10
    #10 0x7ff8cd1a76bf in CallFromStack /builds/worker/checkouts/gecko/js/src/vm/Interpreter.cpp:635:10
    #11 0x7ff8cd1a76bf in Interpret(JSContext*, js::RunState&) /builds/worker/checkouts/gecko/js/src/vm/Interpreter.cpp:3026:16
    #12 0x7ff8cd18d663 in js::RunScript(JSContext*, js::RunState&) /builds/worker/checkouts/gecko/js/src/vm/Interpreter.cpp:448:10
    #13 0x7ff8cd1bf13a in js::InternalCallOrConstruct(JSContext*, JS::CallArgs const&, js::MaybeConstruct, js::CallReason) /builds/worker/checkouts/gecko/js/src/vm/Interpreter.cpp:603:13
    #14 0x7ff8cd1c0d0a in InternalCall(JSContext*, js::AnyInvokeArgs const&, js::CallReason) /builds/worker/checkouts/gecko/js/src/vm/Interpreter.cpp:631:10
    #15 0x7ff8cd1c0f89 in js::Call(JSContext*, JS::Handle<JS::Value>, JS::Handle<JS::Value>, js::AnyInvokeArgs const&, JS::MutableHandle<JS::Value>, js::CallReason) /builds/worker/checkouts/gecko/js/src/vm/Interpreter.cpp:648:8
    #16 0x7ff8cd373ea2 in JS::Call(JSContext*, JS::Handle<JS::Value>, JS::Handle<JS::Value>, JS::HandleValueArray const&, JS::MutableHandle<JS::Value>) /builds/worker/checkouts/gecko/js/src/jsapi.cpp:2798:10
    #17 0x7ff8c703ccd0 in mozilla::dom::EventListener::HandleEvent(mozilla::dom::BindingCallContext&, JS::Handle<JS::Value>, mozilla::dom::Event&, mozilla::ErrorResult&) /builds/worker/workspace/obj-build/dom/bindings/EventListenerBinding.cpp:54:8
    #18 0x7ff8c7b0e4bd in void mozilla::dom::EventListener::HandleEvent<mozilla::dom::EventTarget*>(mozilla::dom::EventTarget* const&, mozilla::dom::Event&, mozilla::ErrorResult&, char const*, mozilla::dom::CallbackObject::ExceptionHandling, JS::Realm*) /builds/worker/workspace/obj-build/dist/include/mozilla/dom/EventListenerBinding.h:66:12
    #19 0x7ff8c7b0dee4 in mozilla::EventListenerManager::HandleEventSubType(mozilla::EventListenerManager::Listener*, mozilla::dom::Event*, mozilla::dom::EventTarget*) /builds/worker/checkouts/gecko/dom/events/EventListenerManager.cpp:1073:43
    #20 0x7ff8c7b0fa0e in mozilla::EventListenerManager::HandleEventInternal(nsPresContext*, mozilla::WidgetEvent*, mozilla::dom::Event**, mozilla::dom::EventTarget*, nsEventStatus*, bool) /builds/worker/checkouts/gecko/dom/events/EventListenerManager.cpp:1271:17
    #21 0x7ff8c7afc5bf in mozilla::EventTargetChainItem::HandleEvent(mozilla::EventChainPostVisitor&, mozilla::ELMCreationDetector&) /builds/worker/checkouts/gecko/dom/events/EventDispatcher.cpp:356:17
    #22 0x7ff8c7afab11 in mozilla::EventTargetChainItem::HandleEventTargetChain(nsTArray<mozilla::EventTargetChainItem>&, mozilla::EventChainPostVisitor&, mozilla::EventDispatchingCallback*, mozilla::ELMCreationDetector&) /builds/worker/checkouts/gecko/dom/events/EventDispatcher.cpp:558:16
    #23 0x7ff8c7aff5e9 in mozilla::EventDispatcher::Dispatch(nsISupports*, nsPresContext*, mozilla::WidgetEvent*, mozilla::dom::Event*, nsEventStatus*, mozilla::EventDispatchingCallback*, nsTArray<mozilla::dom::EventTarget*>*) /builds/worker/checkouts/gecko/dom/events/EventDispatcher.cpp:1055:11
    #24 0x7ff8c7b04ae9 in mozilla::EventDispatcher::DispatchDOMEvent(nsISupports*, mozilla::WidgetEvent*, mozilla::dom::Event*, nsPresContext*, nsEventStatus*) /builds/worker/checkouts/gecko/dom/events/EventDispatcher.cpp
    #25 0x7ff8c5ae695e in nsINode::DispatchEvent(mozilla::dom::Event&, mozilla::dom::CallerType, mozilla::ErrorResult&) /builds/worker/checkouts/gecko/dom/base/nsINode.cpp:1302:17
    #26 0x7ff8c554c407 in nsContentUtils::DispatchEvent(mozilla::dom::Document*, nsISupports*, nsTSubstring<char16_t> const&, mozilla::CanBubble, mozilla::Cancelable, mozilla::Composed, mozilla::Trusted, bool*, mozilla::ChromeOnlyDispatch) /builds/worker/checkouts/gecko/dom/base/nsContentUtils.cpp:4091:28
    #27 0x7ff8c554c143 in nsContentUtils::DispatchTrustedEvent(mozilla::dom::Document*, nsISupports*, nsTSubstring<char16_t> const&, mozilla::CanBubble, mozilla::Cancelable, mozilla::Composed, bool*) /builds/worker/checkouts/gecko/dom/base/nsContentUtils.cpp:4061:10
    #28 0x7ff8c580edf1 in mozilla::dom::Document::DispatchContentLoadedEvents() /builds/worker/checkouts/gecko/dom/base/Document.cpp:7268:3
    #29 0x7ff8c58de654 in applyImpl<mozilla::dom::Document, void (mozilla::dom::Document::*)()> /builds/worker/workspace/obj-build/dist/include/nsThreadUtils.h:1158:12
    #30 0x7ff8c58de654 in apply<mozilla::dom::Document, void (mozilla::dom::Document::*)()> /builds/worker/workspace/obj-build/dist/include/nsThreadUtils.h:1164:12
    #31 0x7ff8c58de654 in mozilla::detail::RunnableMethodImpl<mozilla::dom::Document*, void (mozilla::dom::Document::*)(), true, (mozilla::RunnableKind)0>::Run() /builds/worker/workspace/obj-build/dist/include/nsThreadUtils.h:1210:13
    #32 0x7ff8c271e2cd in mozilla::SchedulerGroup::Runnable::Run() /builds/worker/checkouts/gecko/xpcom/threads/SchedulerGroup.cpp:282:20
    #33 0x7ff8c2751c90 in nsThread::ProcessNextEvent(bool, bool*) /builds/worker/checkouts/gecko/xpcom/threads/nsThread.cpp:1220:14
    #34 0x7ff8c275c76c in NS_ProcessNextEvent(nsIThread*, bool) /builds/worker/checkouts/gecko/xpcom/threads/nsThreadUtils.cpp:481:10
    #35 0x7ff8c37d0d8a in mozilla::ipc::MessagePump::Run(base::MessagePump::Delegate*) /builds/worker/checkouts/gecko/ipc/glue/MessagePump.cpp:87:21
    #36 0x7ff8c36fdae7 in RunInternal /builds/worker/checkouts/gecko/ipc/chromium/src/base/message_loop.cc:315:10
    #37 0x7ff8c36fdae7 in RunHandler /builds/worker/checkouts/gecko/ipc/chromium/src/base/message_loop.cc:308:3
    #38 0x7ff8c36fdae7 in MessageLoop::Run() /builds/worker/checkouts/gecko/ipc/chromium/src/base/message_loop.cc:290:3
    #39 0x7ff8c97e9fd8 in nsBaseAppShell::Run() /builds/worker/checkouts/gecko/widget/nsBaseAppShell.cpp:137:27
    #40 0x7ff8ccf8c316 in XRE_RunAppShell() /builds/worker/checkouts/gecko/toolkit/xre/nsEmbedFunctions.cpp:909:20
    #41 0x7ff8c36fdae7 in RunInternal /builds/worker/checkouts/gecko/ipc/chromium/src/base/message_loop.cc:315:10
    #42 0x7ff8c36fdae7 in RunHandler /builds/worker/checkouts/gecko/ipc/chromium/src/base/message_loop.cc:308:3
    #43 0x7ff8c36fdae7 in MessageLoop::Run() /builds/worker/checkouts/gecko/ipc/chromium/src/base/message_loop.cc:290:3
    #44 0x7ff8ccf8b9ca in XRE_InitChildProcess(int, char**, XREChildData const*) /builds/worker/checkouts/gecko/toolkit/xre/nsEmbedFunctions.cpp:740:34
    #45 0x560988ec520f in content_process_main /builds/worker/checkouts/gecko/browser/app/../../ipc/contentproc/plugin-container.cpp:56:28
    #46 0x560988ec520f in main /builds/worker/checkouts/gecko/browser/app/nsBrowserApp.cpp:303:18
    #47 0x7ff8e2f97b96 in __libc_start_main /build/glibc-OTsEL5/glibc-2.27/csu/../csu/libc-start.c:310
    #48 0x560988e1abbc in _start (/home/user/builds/mc-asan/firefox+0x9ebbc)

AddressSanitizer can not provide additional info.
SUMMARY: AddressSanitizer: SEGV /builds/worker/workspace/obj-build/dist/include/nsAutoPtr.h:147:12 in get
Flags: in-testsuite?
Whiteboard: [bugmon:confirm][fuzzblocker] → [bugmon:bisected,confirmed][fuzzblocker]
Bugmon Analysis: Verified bug as reproducible on mozilla-central 20200326153427-31360ced8ff8. The bug appears to have been introduced in the following build range: > Start: 4f4de7a970353de0c86ee8cf7470ea00feb0cec9 (20190629213026) > End: b8938b6afa9c4b498ec016d1b3d50be0e50684c0 (20190630095236) > Pushlog: https://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=4f4de7a970353de0c86ee8cf7470ea00feb0cec9&tochange=b8938b6afa9c4b498ec016d1b3d50be0e50684c0

Bugbug thinks this bug is a regression, but please revert this change in case of error.

Keywords: regression

Hi Kagami, this looks regressed from bug 1560462 and blocks fuzzy testing. Could you please take a look?

Flags: needinfo?(krosylight)
Priority: -- → P1
Assignee: nobody → krosylight
Status: NEW → ASSIGNED
Flags: needinfo?(krosylight)
Bugmon Analysis:
Pushed by krosylight@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/47a2b78bc6ee Handle validation error when multiplying r=boris
Created web-platform-tests PR https://github.com/web-platform-tests/wpt/pull/22577 for changes under testing/web-platform/tests
Whiteboard: [bugmon:bisected,confirmed][fuzzblocker] → [bugmon:bisected,confirmed][fuzzblocker], [wptsync upstream]
Upstream web-platform-tests status checks passed, PR will merge once commit reaches central.
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla76
Flags: in-testsuite? → in-testsuite+
Upstream PR merged by moz-wptsync-bot
Status: RESOLVED → VERIFIED
Keywords: bugmon
Bugmon Analysis: Verified bug as fixed on rev mozilla-central 20200423145559-03626342f6e6. Removing bugmon keyword as no further action possible. Please review the bug and re-add the keyword for further analysis.

:saschanaz, since this bug contains a bisection range, could you fill (if possible) the regressed_by field?
For more information, please visit auto_nag documentation.

Flags: needinfo?(krosylight)
Flags: needinfo?(krosylight)
Regressed by: 1560462
Has Regression Range: --- → yes
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: