Bug 1625197 - Handle validation error when multiplying r=boris

Differential Revision: https://phabricator.services.mozilla.com/D69014